[package]
name = "crypto-utils"
version = "0.4.0"
description = "Cryptography Utils for Rust"
authors = ["MedzikUser <nivua1fn@duck.com>"]
license = "MIT"
keywords = ["crypto", "sha"]
categories = ["cryptography"]
homepage = "https://github.com/MedzikUser/rust-crypto-utils"
repository = "https://github.com/MedzikUser/rust-crypto-utils.git"
edition = "2021"

[features]
default = ["full"]
full = ["sha", "jwt"]
sha = ["sha1", "sha2", "hmac"]
jwt = ["chrono", "serde", "jsonwebtoken"]

[dependencies]
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }
hmac = { version = "0.12.1", optional = true }
chrono = { version = "0.4.22", optional = true }
serde = { version = "1.0.144", optional = true }
jsonwebtoken = { version = "8.1.1", optional = true }
thiserror = "1.0.35"

[dev-dependencies]
anyhow = "1.0.65"
hex = { version = "0.4.3" }
